--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       ENVIRONMENT: prod
       HOST: 0.0.0.0
       PORT: 8080
+      WEBHOOK_SECRET: SECRET
+      TEST_GROUP_ID: 785037622
+      APP_REPO: ACaiCat/WebHookTest
     restart: unless-stopped
     networks:
       - bot-network
