fix: correct bot container host

--- a/appsettings.json
+++ b/appsettings.json
@@ -26,7 +26,7 @@
   "Implementations": [
     {
       "Type": "ReverseWebSocket",
-      "Host": "fzuhelper-bot-bot",
+      "Host": "fzuhelper-bot",
       "Port": 8080,
       "Suffix": "/onebot/v11/ws",
       "ReconnectInterval": 1000,
