--- a/.github/workflows/test-docker-compose.yml
+++ b/.github/workflows/test-docker-compose.yml
@@ -20,9 +20,12 @@ jobs:
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v3.11.1
 
+    - name: Copy Example .env File 
+      run: cp .env.example .env
+    
     - name: Start Docker Compose
-      run: docker-compose up -d
+      run: docker compose up -d
 
     - name: Stop Docker Compose
       if: always()
-      run: docker-compose down
+      run: docker compose down
