feat: add offline feishu notice

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DRIVER=~fastapi
 WEBHOOK_SECRET=SECRET
 TEST_GROUP_ID=785037622
 APP_REPO=ACaiCat/WebHookTest
+OFFLINE_NOTICE_WEBHOOK=https://029fb7d5-a508-4785-bac8-3ed9d4cc3398.mock.pstmn.io/test
