--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "fzuhelper-bot"
 readme = "README.md"
 requires-python = ">=3.9, <4.0"
 dependencies = [
+    "aiohttp>=3.12.15",
     "nb-cli>=1.4.2",
     "nonebot-adapter-onebot>=2.4.6",
     "nonebot2[fastapi]>=2.4.3",
