chore(ci): build and push docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,8 @@
 
 # .env.*
 .dockerignore
-Dockerfile
-docker-compose.yml
+docker/Dockerfile
+docker/docker-compose.yml
 README.md
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,node,visualstudiocode,jetbrains,macos,windows,linux
