--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   nonebot:
-    build: .
+    image: ghcr.io/west2-online/fzuhelper-bot:edge
     container_name: fzuhelper-bot
     volumes:
       - ./data:/app/data
