--- a/.dockerignore
+++ b/.dockerignore
@@ -471,6 +471,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,node,visualstudiocode,jetbrains,macos,windows,linux
-
+renovate.json
 data
 .idea
