chore(lagrange): update sign server to 39038

--- a/docker/data/appsettings.json
+++ b/docker/data/appsettings.json
@@ -7,7 +7,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SignServerUrl": "",
+  "SignServerUrl": "https://sign.lagrangecore.org/api/sign/39038",
   "SignProxyUrl": "",
   "MusicSignServerUrl": "",
   "Account": {
