--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -53,7 +53,8 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
           mkdir docker-fzuhelper-bot
-          cp -r docker docker-fzuhelper-bot
+          cp -r docker/* docker-fzuhelper-bot
+          ls docker-fzuhelper-bot
           rm docker-fzuhelper-bot/Dockerfile
           tar -czf docker-fzuhelper-bot.tar.gz docker-fzuhelper-bot/
           zip -r docker-fzuhelper-bot.zip docker-fzuhelper-bot/
